	PR tree-optimization/27865 	* tree-vrp.c (adjust_range_with_scev): Do not use TYPE_{MIN,MAX}_VALUE 	for pointer types. 	* tree-scalar-evolution.c (fold_used_pointer_cast, pointer_offset_p, 	fold_used_pointer, pointer_used_p): New functions. 	(analyze_scalar_evolution_1): Use fold_used_pointer. 	* tree-chrec.c (convert_affine_scev): Convert no-op casts correctly. 	* tree-ssa-loop-ivopts.c (generic_type_for): Return integral type 	for pointers.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116213 138bc75d-0d04-0410-961f-82ee72b054a4